# VisionRevengeOfTheSith

./: CMakeLists.txt  CMakeLists.txt~
src/: GlobalVars.hpp  vision_node.cpp
src/Navigation/: OccupGrid.cpp  OccupGrid.cpp~  OccupGrid.hpp  OccupGrid.hpp~
src/PlaneExtraction/: PlaneExtractor.cpp  PlaneExtractor.hpp
src/Transform/: Head.cpp  Head.hpp  RobotBase.cpp  RobotBase.hpp  Transform.cpp  Transform.cpp~  Transform.hpp  Transform.hpp~
src/Utils/: DetectedObject.cpp  DetectedObject.cpp~  DetectedObject.hpp  DetectedObject.hpp~  LineSegment.h~  ObjectRecognizer.cpp~  ObjectRecognizer.hpp~  ObjectsExtractor.cpp  ObjectsExtractor.cpp~  ObjectsExtractor.hpp  ObjectsExtractor.hpp~  PlanarHorizontalSegment.cpp  PlanarHorizontalSegment.hpp  PlanarHorizontalSegment.hpp~  Plane3D.cpp  Plane3D.cpp~  Plane3D.hpp  Plane3D.hpp~  UtilitiesVSN.cpp~  UtilitiesVSN.hpp~
srv/: vsn_findonplanes.srv
